k8s_yaml/k002_test_pvc.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ubuntu
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ubuntu
    spec:
      containers:
      - name: ubuntu
        image: ubuntu:latest
        command: ["tail",  "-f", "/dev/null"]
        ports:	
          - containerPort: 3000
        volumeMounts:
        - mountPath: /mnt
          name: pvol
      volumes:
      - name: pvol
        persistentVolumeClaim:
          claimName: mypvc1
