k8s_yaml/k003_mysql.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mysql-server
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql-server
    spec:
      containers:
      - name: mysql
        image: registry.au-syd.bluemix.net/takara/mysql:v1
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: pvol
      volumes:
      - name: pvol
        persistentVolumeClaim:
          claimName: mypvc1
