k8s_yaml/s02_mysql_deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mysql-server
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql-server
    spec:
      containers:
      - name: mysql
        image: registry.au-syd.bluemix.net/takara/mysql:v1
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: pvol
          subPath: mysql-data  
      volumes:
      - name: pvol
        persistentVolumeClaim:
          claimName: pvc-01
