k8s_yaml/s04_redis_deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:latest
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /data
          name: pvol
          subPath: redis-data	  
      volumes:
      - name: pvol
        persistentVolumeClaim:
          claimName: pvc-01
