k8s_yaml/s06_web-app-0-v2.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: web-app
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: web-app
    spec:
      restartPolicy: Always
      hostname: app
      containers:	     
      - name: web
        image: registry.au-syd.bluemix.net/takara/web:v1
        ports:
        - containerPort: 80
        resources: {}
        volumeMounts:
        - mountPath: /var/www
          name: www-vol
      - name: app
        image: registry.au-syd.bluemix.net/takara/app:v1
        resources: {}
        volumeMounts:
        - mountPath: /var/www
          name: www-vol
      volumes:
      - name: www-vol
        emptyDir: {}
