k8s_yaml/s07_loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: web-app-lb
spec:
  type: LoadBalancer
  selector:
    app: web-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 32222
  loadBalancerIP: 161.202.142.133
