k8s_yaml/s07_nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: web-app-np
spec:
  type: NodePort
  selector:
    app: web-app
  ports:
  - protocol: TCP
    port: 80
    nodePort: 31514
