k8s_yaml/s10_lb-jenkins.yml
apiVersion: v1
kind: Service
metadata:
  name: web-jenkins-lb
spec:
  type: LoadBalancer
  selector:
    app: web-jenkins
  ports:
  - protocol: TCP
    name: web
    port: 8080
    targetPort: 8080
  - protocol: TCP
    name: hook
    port: 50000
    targetPort: 50000
  loadBalancerIP: 161.202.142.134
