k8s_yaml/s11_jenkins_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-svc
spec:
  selector:
    app: web-jenkins
  ports:
  - name: web
    protocol: TCP
    port: 8080
    targetPort: 8080
  - name: web-hook
    protocol: TCP
    port: 50000
    targetPort: 50000
