k8s_yaml/s08_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-app-ingress
spec:
  tls:
  - hosts:
    - mycluster3.jp-tok.containers.mybluemix.net
    secretName: mycluster3
  rules:
  - host: mycluster3.jp-tok.containers.mybluemix.net
    http:
      paths:
      - path: /
        backend:
          serviceName: web-app
          servicePort: 80
