k8s_yaml/s12_jenkins_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-jenkins
spec:
  tls:
  - hosts:
    - mycluster5.jp-tok.containers.mybluemix.net
    secretName: mycluster5
  rules:
  - host: mycluster5.jp-tok.containers.mybluemix.net
    http:
      paths:
      - path: /jenkins
        backend:
          serviceName: jenkins-svc
          servicePort: 8080
